# lucy

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rs
src/: app.rs  app_state.rs  app_view.rs  components.rs  input.rs  layout.rs  log_parser.rs  main.rs  panel_components.rs  setup.rs  simple_formatter.rs  sql_info.rs  theme.rs  ui.rs
