[package]
name = "lucy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lucy"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
color-eyre = "0.6"
tracing = "0.1"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = [
    "all-widgets",
    "unstable-rendered-line-info",
] }

regex = "1.7.0"
chrono = "0.4"
rand = "0.9"
once_cell = "1.8.0"
lazy_static = "1.4.0"
ansi-to-tui = "7.0.0"
libc = "0.2.171"
backtrace = "0.3.74"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
