[package]
name = "lucy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lucy"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
schemars = "0.8.22"
color-eyre = "0.6.5"
tracing = "0.1.44"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = [
    "all-widgets",
    "unstable-rendered-line-info",
] }

regex = "1.12.3"
chrono = "0.4.44"
rand = "0.9.2"
once_cell = "1.21.3"
lazy_static = "1.5.0"
ansi-to-tui = "7.0.0"
libc = "0.2.182"
backtrace = "0.3.76"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
